--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,3 +1,19 @@
 % !TEX root = thesis.tex
 
 \chapter{Conclusion}
+
+
+\section{Coming back to the genitive}
+
+
+In Chapter \ref{ch:recurring} I briefly mentioned the genitive. Even though others \citep[cf.][]{harbert1978,pittner1995} have included the genitive in their discussion about headless relatives, I did not. My reason for that the genitive does not engage in case competition with all other possible cases in the three main languages under discussion: Gothic, Old High German and Modern German.
+
+What do I predict for the genitive? Starke: S-acc --- S-dat --- gen --- B-acc --- B-dat
+
+hierarchies for each language individually. Gothic syncretisms: acc-dat, acc-nom, nom-gen(!). Modern German: nom-acc-dat-gen? Old High German: ?
+
+then the predictions would be..
+
+The genitive differs from the other cases in a particular way. That is, nominative, accusative and dative are dependents of the verb (or prepositions). Genitives can be dependents of verbs, or they can be dependents of nouns, as possessors or partitives. Consider the example in \ref{ex:gothic-gen-acc}. The genitive relative pronoun \tit{þiz(e)} `what.\tsc{gen}' is a dependent of the noun \tit{waiht} `thing'. Most of the examples in headless relatives contain genitives that depend on nouns and not those that depend on verbs. The (genitive) possessor is also placed far away from the other three cases in \posscitet{keenan1977} relativization hiearchy.
+
+I leave it for future research..     
