--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -301,7 +301,7 @@
   doi={10.5334/gjgl.373}
 }
 
-@article{smith2019case,
+@article{smith2019,
   title={Case and number suppletion in pronouns},
   author={Smith, Peter W and Moskal, Beata and Xu, Ting and Kang, Jungmin and Bobaljik, Jonathan David},
   journal={Natural Language \& Linguistic Theory},
@@ -375,4 +375,37 @@
   author = {Bobaljik, Jonathan},
   year = {2012},
   doi={10.7551/mitpress/9069.003.0001}
+}
+
+@article{bergsma2019,
+  title={Mismatches in free relatives --- grafting nanosyntactic trees},
+  author={Bergsma, Fenna},
+  journal={Glossa: a journal of general linguistics},
+  volume={4},
+  number={1},
+  year={2019},
+  publisher={Ubiquity Press},
+  doi={10.5334/gjgl.821}
+}
+
+@article{caha2010,
+  title={The parameters of case marking and spell out driven movement},
+  author={Caha, Pavel},
+  journal={Linguistic variation yearbook},
+  volume={10},
+  number={1},
+  pages={32--77},
+  year={2010},
+  publisher={John Benjamins},
+  doi={10.1075/livy.10.02cah}
+}
+
+@article{friedman1991,
+  title={Romani nominal inflection: Cases or postpositions},
+  author={Friedman, Victor A},
+  journal={Problemy opisu gramatycznego języków słowiańskych, (Studia gramatyczne, Vol. 11)},
+  pages={57--63},
+  year={1991},
+  institute={Polish Academy of Sciences},
+  address={Warszaw}
 }
