--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -1,23 +1,23 @@
 % !TEX root = thesis.tex
 
-\chapter{A reoccurring pattern}
+\chapter{A recurring pattern}\label{ch:recurring}
 
-This chapter introduces the pattern that forms the focus of the first part of the dissertation. In Section \ref{sec:pattern-rels} I show that headless relatives adhere to the case scale in \ref{ex:case-scale-intro}.
+This chapter introduces the pattern that forms the focus of the first part of the dissertation. In Section \ref{sec:pattern-rels} I show that case competition in headless relatives adheres to the case scale in \ref{ex:case-scale-intro}.
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale-intro}
 
-Then I show that this pattern is not unique to headless relatives. It appears in more morphosyntactic and morphophonological phenomena. Section \ref{sec:impl-hier} discusses two implicational hierarchies that show the case ordering. The hierarchies concern agreement and relativization across languages. Section \ref{sec:case-morphology} shows that the case scale also shows up in phonological patterns. It can be observed in patterns of syncretism and in morphological containment.
+Then I show that this pattern is not unique to headless relatives. It appears in more syntactic and morphological phenomena. Section \ref{sec:impl-hier} discusses two implicational hierarchies that show the same case ordering. The hierarchies concern agreement and relativization across languages. Section \ref{sec:case-morphology} shows that the case scale also shows up in morphological patterns. It can be observed in patterns of syncretism and in morphological containment.
 
 
 \section{Case competition in headless relatives}\label{sec:pattern-rels}
 
-As the name suggests, headless relatives are relative clauses that lack an (overt) head. The internal case, the case from the relative clause, and the external case, the case from the main clause, compete to surface on the relative pronoun. It is crosslinguistically shown that the two competing cases always adhere to particular case scale \citep[cf.][]{harbert1978,pittner1995,vogel2001,grosu2003,caha2019}. This scale is given in \ref{ex:case-scale}. Elements more on the right on this scale win over elements more on the left of this scale.\footnote{
+As the name suggests, headless relatives are relative clauses that lack an (overt) head. The internal case, the case from the relative clause, and the external case, the case from the main clause, compete to surface on the relative pronoun. It has been argued in the literature that the two competing cases always adhere to particular case scale \citep[cf.][]{harbert1978,pittner1995,vogel2001,grosu2003,caha2019,bergsma2019}. This scale is given in \ref{ex:case-scale}. Elements more on the right on this scale win over elements more on the left of this scale.\footnote{
 I leave the genitive aside. In Section \ref{sec:genitive} I motivate why.
 }
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale}
 
-This can be reformulated as follows. In a competition, dative wins over accusative, and dative wins over nominative. Additionally, accusative wins over nominative. In this section I illustrate this scale with examples. The relative pronoun always appears in the case more to the right on the case scale. It does not matter whether it is the internal or the external case. I illustrate this with examples from headless relatives in Gothic \citep{harbert1978}.
+This can be reformulated as follows. In a competition, dative wins over accusative, and dative wins over nominative. Additionally, accusative wins over nominative. In this section I illustrate this scale with examples. When two cases compete, the relative pronoun always appears in the case more to the right on the case scale. It does not matter whether it is the internal or the external case. I illustrate this with examples from headless relatives in Gothic \citep{harbert1978}.
 
 I start with the competition between dative and accusative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in dative case and never in accusative. The examples are repeated from the introduction.
 
@@ -145,19 +145,19 @@ Old High German is an example of a language that only allows the external case t
 This topic is the main focus of Part \ref{part:complexity} of this dissertation.
 }
 
-In the remainder of this chapter I show that headless relatives are not the only place where the case scale shows up. Instead, it appears with more morphosyntactic phenomena. Moreover, exactly this scale is also reflected in morphophonology.
+In the remainder of this chapter I show that headless relatives are not the only place where the case scale shows up. Instead, it appears with more syntactic phenomena. Moreover, exactly this scale is also reflected in morphology.
 
 
 \section{Two implicational hierarchies}\label{sec:impl-hier}
 
-In this section I discuss two additional phenomena in morphosyntax that reflect the \ac{nom} < \ac{acc} < \ac{dat} scale. Both are implicational hierarchies. The first one is about agreement, the second one is about relativization. These phenomena show that the pattern in headless relatives is not something that stands on itself. The scale is a pattern that reoccurs across languages and across different phenomena. Therefore, it should not be treated as an exception with its own stipulated rule. Instead, it is something general that should also follow from general processes in languages.
+In this section I discuss two additional syntactic phenomena that reflect the \ac{nom} < \ac{acc} < \ac{dat} scale. The first one is an implicational hierarchy that concerns agreement. The second one is an implicational hierarchy about relativization.
 
 
 \subsection{Agreement}
 
 Agreement can be seen as ``a systematic covariance between a semantic or formal property of one element and a formal property of another'' \citep{steel1978}. Put differently, the shape of one element changes according to some properties of an element it relates to. In this section I discuss the agreement between a predicate and its arguments.
 
-It differs per language with how many of its arguments a predicate agrees. However, it is not random with which agreement takes place. Instead, there is a implicational hierarchy that is identical to the one observed for headless relatives: \ac{nom} < \ac{acc} < \ac{dat}.
+It differs per language with how many of its arguments a predicate agrees. However, it is not random with which agreement takes place. Instead, there is an implicational hierarchy that is identical to the one observed for headless relatives: \ac{nom} < \ac{acc} < \ac{dat}.
 
 \citet{moravcsik1978} formulated the implicational hierarchy in terms of grammatical functions subject, direct object and indirect object.\footnote{
 \citet{moravcsik1978} also included adverbs on the lowest end of the hierarchy. I leave them out here, because they are not relevant for the discussion.
@@ -186,7 +186,7 @@ The implicational hierarchy holds for languages, not for sentences. That is, it 
 Japanese is an example of a language that does not show any agreement on the predicate. An example is given in \ref{ex:japanese-agr}. The predicate \tit{okutta} `sent' does not agree with the subject \tit{Tarooga} `Taro', with the direct object \tit{nimotuo} `package' or with the indirect object \tit{Hanakoni} `Hanako'.
 
 \exg. Taroo-ga Hanako-ni nimotu-o okutta.\\
- Taro-\tsc{nom} Hanako-\tsc{dat} package-\tsc{acc} sent\\
+ Taro-\ac{nom} Hanako-\ac{dat} package-\ac{acc} sent\\
  `Taro sent Hanako a package.' \flushfill{Japanese, \pgcitealt{miyagawa2004}{5}}\label{ex:japanese-agr}
 
 German is an example of a language that can show agreement with the subject of the clause. An example is given in \ref{ex:german-agr}. The predicate \tit{gibst} `give' contains the morpheme \tit{-st}, marked in bold. This morpheme is the agreement morpheme for second person singular subjects. The predicate \tit{gibst} `give' agrees in person and number with the subject \tit{du} `you'. There is no agreement with the direct object \tit{das Buch} `the book' or the indirect object \tit{mir} `me'.
@@ -291,7 +291,7 @@ In the languages I discuss in this dissertation, I focus on languages that have 
   \caption{\posscitealt{bobaljik2006} simplified schema}
 \end{figure}
 
-\citeauthor{bobaljik2006} gives examples of situations in which grammatical function and morphological case do not match. In these situations, case seem to be capture the facts for the implicational hierarchy, and grammatical function does not. I give two examples from Icelandic that illustrate this point.
+\citeauthor{bobaljik2006} gives examples of situations in which grammatical function and morphological case do not match. In these situations, case seem to capture the facts for the implicational hierarchy, and grammatical function does not. I give two examples from Icelandic that illustrate this point.
 
 Icelandic is a language that has dative subjects. If agreement takes place with the grammatical subject, it is expected that the dative subject agrees with the predicate. This is not what happens, as illustrated in \ref{ex:icelandic-dat-subj}. The dative subject \tit{morgum studentum} `many students' is plural. The sentence is ungrammatical with the predicate \tit{líka} `like' inflecting for plural as well. So, the dative subject does not agree in number with the predicate. In other words, it is not the grammatical subject that shows agreement.
 
@@ -302,7 +302,7 @@ Icelandic is a language that has dative subjects. If agreement takes place with 
 Instead, it is the nominative object that agrees with the verb. This is illustrated in \ref{ex:icelandic-nom-obj}. The dative subject \tit{konunginum} `the king' is singular. The nominative object \tit{ambáttir} `slaves' is plural. The predicate \tit{voru} `were' is inflected for plural, agreeing with the nominative object. This is expected if morphological case determines agreement: it is the nominative that shows agreement. The grammatical role, the fact that this nominative is an object, does not influence agreement.
 
 \exg. Um veturinn voru konunginum gefnar ambáttir\\
-In the.winter were.\tsc{pl} the.king.\ac{dat} given slaves.\ac{nom}\\
+In the.winter were.\ac{pl} the.king.\ac{dat} given slaves.\ac{nom}\\
 `In the winter, the king was given (female) slaves.' \flushfill{\pgcitealt{zaenen1985}{112}}\label{ex:icelandic-nom-obj}
 
 In conclusion, agreement follows the same implicational hierarchy as the case scale in headless relatives: \ac{nom} < \ac{acc} < \ac{dat}.
@@ -316,7 +316,7 @@ Relativization refers to the process in which a relative clause is derived from 
 \a. You like the woman. \label{ex:rel-non}
 \b. \tbf{the} \tbf{woman}, (who) you like \label{ex:rel-realati}
 
-In \ref{ex:rel-realati}, it is the object of the clause that is relativized. It differs per language which elements can be relativized with a particular strategy. Just like the distribution was not random for agreement, it is not random which elements can be relativized. Instead, there is a implicational hierarchy that is identical to the one observed for the case scale: \ac{nom} < \ac{acc} < \ac{dat}.
+In \ref{ex:rel-realati}, it is the object of the clause that is relativized. It differs per language which elements can be relativized with a particular strategy. Just like the distribution was not random for agreement, it is not random which elements can be relativized. Instead, there is an implicational hierarchy that is identical to the one observed for the case scale: \ac{nom} < \ac{acc} < \ac{dat}.
 
 \citet{keenan1977} formulated the implicational hierarchy in terms of the grammatical functions subject, direct object and indirect object.\footnote{
 \citet{keenan1977} also included obliques, possessives and objects of comparison on the lowest end of the hierarchy. I leave them out here, because they are not relevant for the discussion.
@@ -344,30 +344,7 @@ The implicational hierarchy is schematically represented in Figure \ref{fig:rela
 
 There are four types of languages possible: first, a language that allows only the subject to be relativized with a particular strategy and not the direct and indirect object; second, a language that allows the subject and direct object to be relativized with a particular strategy but not the indirect object; and third, a language that allows the subject, the direct object and the indirect object to be relativized with a particular strategy.
 
-Malagasy is an example of a language that allows subjects to be relativized using a particular strategy, but not direct and indirect objects.\footnote{
-Later I draw the parallel between subject and nominative, direct object and accusative and indirect object and dative \citep[after][]{caha2009}. As Malagasy does not have any overt morphological system, it does not hold that the subject corresponds to the nominative in this case.
-German is another example of a language that allows subjects to be relativized using a particular strategy, but not direct and indirect object. This strategy is the participle construction. \ref{ex:german-rel-decl} is an example of a declarative sentence in German. It is a transitive sentence that contains the subject \tit{die Frau} `the woman' and the object \tit{der Mann} `the man'.
-
-\exg. Die Frau küsst den Mann.\\
-the woman kisses the man\\
-`The woman is kissing the man.' \flushfill{German}\label{ex:german-rel-decl}
-
-In \ref{ex:german-rel-subj}, the subject from the declarative sentence \tit{die Frau} `the woman', marked in bold, is relativized. The predicate form the declarative clause \tit{küsst} `kisses' is turned in into the participle \tit{küssende} `kissing'. The participle appears at the end of the relative clause \tit{den Mann küssende} `the man kissing'. The relative clause directly precedes the noun of the subject, creating distance between the determiner \tit{die} `the' and \tit{Frau} `woman'.
-
-\exg. \tbf{die} den Mann küssende \tbf{Frau}\\
- the the man kissing woman\\
- `the woman who is kissing the man' \flushfill{German}\label{ex:german-rel-subj}
-
-The object of \ref{ex:german-rel-decl} \tit{den Man} `the man', marked in bold, cannot be relativized in the same way, as shown in \ref{ex:german-rel-no-do}. Again, the predicate form the declarative clause \tit{küsst} `kisses' is turned in into the participle \tit{küssende} `kissing'. The participle appears at the end of the relative clause \tit{die Frau küssende} `the woman kissing'. The relative clause directly precedes the noun of the object, creating distance between the determiner \tit{der} `the' and \tit{Mann} `man'. This example is ungrammatical.
-
-\exg. *\tbf{den} die Frau küssende \tbf{Mann}\\
- the the woman kissing man\\
- `the man who is kissing the woman' \flushfill{German}\label{ex:german-rel-no-do}
-\z.
-
-\phantom{x}}
-
-\ref{ex:malagasy-decl} is an example of a declarative sentence in Malagasy. It is a transitive sentence that contains the subject \tit{ny mpianatra} `the student' and the direct object \tit{ny vehivavy} `the woman'.
+Malagasy is an example of a language that allows subjects to be relativized using a particular strategy, but not direct and indirect objects. \ref{ex:malagasy-decl} is an example of a declarative sentence in Malagasy. It is a transitive sentence that contains the subject \tit{ny mpianatra} `the student' and the direct object \tit{ny vehivavy} `the woman'.
 
 \exg. Nahita ny vehivavy ny mpianatra.\\
  saw the woman the student\\
@@ -385,7 +362,26 @@ The object of \ref{ex:malagasy-decl} cannot be relativized in the same way, as s
  the woman that saw the student\\
  `the woman that the student saw' \flushfill{Malagasy, \pgcitealt{keenan1977}{70}, my boldfacing}\label{ex:malagasy-no-do}
 
-Malay is an example of a language that has a relativization strategy for subjects and direct objects, but not for indirect objects. \ref{ex:malay-do} shows an example in which the object is relativized. The object here is \tit{ayam} `chicken', marked in bold. It is followed by the relativizer \tit{yang} `that'. After that, the rest of the relative clause \tit{Aminah sedang memakan} `Aminah is eating' follows. The same strategy works to relativize subjects.
+Later in this section I draw the parallel between subject and nominative, direct object and accusative and indirect object and dative \citep[after][]{caha2009}. As Malagasy does not have any overt morphological system, it does not hold that the subject corresponds to the nominative in this case.
+German is another example of a language that allows subjects to be relativized using a particular strategy, but not direct and indirect object. This strategy is the participle construction \citep{keenan1977}. \ref{ex:german-rel-decl} is an example of a declarative sentence in German. It is a transitive sentence that contains the subject \tit{die Frau} `the woman' and the object \tit{der Mann} `the man'.
+
+\exg. Die Frau küsst den Mann.\\
+the woman kisses the man\\
+`The woman is kissing the man.' \flushfill{German}\label{ex:german-rel-decl}
+
+In \ref{ex:german-rel-subj}, the subject from the declarative sentence \tit{die Frau} `the woman', marked in bold, is relativized. The predicate form the declarative clause \tit{küsst} `kisses' is turned in into the participle \tit{küssende} `kissing'. The participle appears at the end of the relative clause \tit{den Mann küssende} `the man kissing'. The relative clause directly precedes the noun of the subject, creating distance between the determiner \tit{die} `the' and \tit{Frau} `woman'.
+
+\exg. \tbf{die} den Mann küssende \tbf{Frau}\\
+ the the man kissing woman\\
+ `the woman who is kissing the man' \flushfill{German}\label{ex:german-rel-subj}
+
+The object of \ref{ex:german-rel-decl} \tit{den Man} `the man', marked in bold, cannot be relativized in the same way, as shown in \ref{ex:german-rel-no-do}. Again, the predicate form the declarative clause \tit{küsst} `kisses' is turned in into the participle \tit{küssende} `kissing'. The participle appears at the end of the relative clause \tit{die Frau küssende} `the woman kissing'. The relative clause directly precedes the noun of the object, creating distance between the determiner \tit{der} `the' and \tit{Mann} `man'. This example is ungrammatical.
+
+\exg. *\tbf{den} die Frau küssende \tbf{Mann}\\
+ the the woman kissing man\\
+ `the man that the woman is kissing' \flushfill{German}\label{ex:german-rel-no-do}
+
+Malay is an example of a language that has a relativization strategy for subjects and direct objects, but not for indirect objects. \ref{ex:malay-do} shows an example in which the object is relativized. The object here is \tit{ayam} `chicken', marked in bold. It is followed by the relativizer \tit{yang} `that'. After that, the rest of the relative clause \tit{Aminah sedang memakan} `Aminah is eating' follows. The same strategy works to relativize subjects, which is not illustrated with an example.
 
 \exg. Ali bunoh \tbf{ayam} yang Aminah sedang memakan.\\
  Ali kill chicken that Aminah \ac{prog} eat\\
@@ -397,13 +393,14 @@ Indirect objects cannot be relativized using the same strategy. \ref{ex:malay-de
  Ali give potato the to woman the\\
  `Ali gave the potato to the woman.'\label{ex:malay-decl} \flushfill{Malay, \pgcitealt{keenan1977}{71}}
 
-This is illustrated by the examples in \ref{ex:malay-no-io}. In \ref{ex:malay-no-io1}, the direct object \tit{perempuan kapada} `to the woman', marked in bold, appears in the first position of the clause. It is followed by the relativizer \tit{yang} `that' and the rest of the relative clause \tit{Ali beri ubi kentang itu} `Ali gave the potato to'. This example in ungrammatical. The example in \ref{ex:malay-no-io2} differs from \ref{ex:malay-no-io} in that the preposition \tit{kapada} `to' has been stranded in the relative clause. This example is ungrammatical as well, indicating this was not the reason for the ungrammaticality.
+This is illustrated by the examples in \ref{ex:malay-no-io}. In \ref{ex:malay-no-io1}, the direct object \tit{perempuan kapada} `to the woman', marked in bold, appears in the first position of the clause. It is followed by the relativizer \tit{yang} `that' and the rest of the relative clause \tit{Ali beri ubi kentang itu kapada} `Ali gave the potato to'. This example in ungrammatical.
+The example in \ref{ex:malay-no-io2} differs from \ref{ex:malay-no-io1} in that the preposition \tit{kapada} `to' has been moved such that it precedes the relativizer \tit{yang} `that'. This example is ungrammatical as well, indicating this was not the reason for the ungrammaticality.
 
 \ex.\label{ex:malay-no-io}
-\ag. *\tbf{perempuan} \tbf{kapada} yang Ali beri {ubi kentang} itu\\
- woman to who Ali give potato that\\ \label{ex:malay-no-io1}
-\bg. *\tbf{perempuan} yang Ali beri {ubi kentang} itu kapada\\
- woman that Ali give potato the to\\ \flushfill{Malay, \pgcitealt{keenan1977}{71}, my boldfacing}\label{ex:malay-no-io2}
+\ag. *\tbf{perempuan} yang Ali beri {ubi kentang} itu kapada\\
+ woman that Ali give potato the to\\\label{ex:malay-no-io1}
+\bg. *\tbf{perempuan} \tbf{kapada} yang Ali beri {ubi kentang} itu\\
+ woman to who Ali give potato that\\\flushfill{Malay, \pgcitealt{keenan1977}{71}, my boldfacing}\label{ex:malay-no-io2}
 
 Basque is an example of a language that has a particular relativization strategy for subjects, direct objects and indirect objects. \ref{ex:basque-decl} is an example of a declarative ditransitive sentence in Basque. The sentence contains the subject \tit{gizonak} `the man', the direct object \tit{liburua} `the book' and the indirect object \tit{emakumeari} `the woman'.
 
@@ -412,9 +409,9 @@ Basque is an example of a language that has a particular relativization strategy
  `The man has given the book to the woman.' \flushfill{Basque, \pgcitealt{keenan1977}{72}}\label{ex:basque-decl}
 
 A relative clause in Basque appears in the prenominal position and it is marked by the invariable marker \tit{-n}.\footnote{
-additionally, the relativized positions do not appear in verbal agreement anymore, but this not visible in the example, because they are all phonologically zero.
+Additionally, the relativized positions do not appear in verbal agreement anymore, but this not visible in the example, because they are all phonologically zero.
 }
-\ref{ex:basque-sub} shows the four relativizations that are derived from \ref{ex:basque-decl}.
+\ref{ex:basque-sub} shows the three relativizations that are derived from \ref{ex:basque-decl}.
 In \ref{ex:basque-sub}, the ergative subject \tit{gizonak} `the man' from \ref{ex:basque-decl} is relativized. The head \tit{gizona} `the man', marked in bold, has lost its ergative marker \tit{-k}, and follows the relative clause \tit{makumeari liburua eman dio} `who has given the book to the woman'. The suffix \tit{-n} is attached to the relative clause.
 In \ref{ex:basque-do}, the absolutive direct object \tit{liburua} `the book' from \ref{ex:basque-decl} is relativized. The head \tit{liburua} `the book', marked in bold, follows the relative clause \tit{gizonak emakumeari eman dion} `that the man has given to the woman'.\footnote{
 The absolutive direct object \tit{liburua} `the book' does not have an additional overt absolutive marker, so this difference cannot be observed when it is relativized.
@@ -433,33 +430,34 @@ In \ref{ex:basque-io}, the dative indirect object \tit{emakumeari} `the woman' f
  man-\ac{def}-\ac{erg} book-\ac{def}.\ac{abs} give has-\ac{rel} woman-\ac{def}\\
  `the woman that the man has given the book to' \flushfill{Basque, \pgcitealt{keenan1977}{72}, my boldfacing}\label{ex:basque-io}
 
-\citealt{caha2009} restates the implicational hierarchy in terms of case. Subject corresponds to nominative, direct object corresponds to accusative, and indirect object corresponds to dative. Again, the case scale \ac{nom} < \ac{acc} < \ac{dat} can be observed.
+\citet{caha2009} restates the implicational hierarchy in terms of case. Subject corresponds to nominative, direct object corresponds to accusative, and indirect object corresponds to dative. Again, the case scale \ac{nom} < \ac{acc} < \ac{dat} can be observed.
 
 
 \section{Case in morphology}\label{sec:case-morphology}
 
-In the two previous sections I showed that the case scale \tsc{nom} < \tsc{acc} < \tsc{dat} can be observed in three morphosyntactic phenomena. First, it shows up in case competition in headless relatives. Second, the case scale forms the basis for the implicational hierarchy observed in agreement across languages. Third, the identical implicational holds for relativization strategies cross-linguistically.
+In the two previous sections I showed that the case scale \ac{nom} < \ac{acc} < \ac{dat} can be observed in three syntactic phenomena. First, it shows up in case competition in headless relatives. Second, the case scale forms the basis for the implicational hierarchy observed in agreement across languages. Third, the identical implicational holds for relativization strategies cross-linguistically.
 
-In this section, I show that this same case scale also shows up in morphophonology. First, syncretism only targets continuous regions on the case scale. Second, several languages show formal containment that mirrors the case scale.
+In this section, I show that this same case scale also shows up in morphology. First, syncretism only targets continuous regions on the case scale. Second, several languages show formal containment that mirrors the case scale.
 
 
 \subsection{Syncretism}
 
-Syncretism refers to the phenomenon whereby two or more different functions are fulfilled by a single form \citep[cf.][]{baerman2002}. In this section I show that syncretism patterns among nominative, accusative and dative are not random. Instead, they pattern along the case scale \tsc{nom} < \tsc{acc} < \tsc{dat}.
+Syncretism refers to the phenomenon whereby two or more different functions are fulfilled by a single form \citep[cf.][]{baerman2002}. In this section I show that syncretism patterns among nominative, accusative and dative are not random. Instead, they pattern along the case scale \ac{nom} < \ac{acc} < \ac{dat}.
 
-It has widely been established that syncretism is restricted by the linear sequence \tsc{nom} --- \tsc{acc} --- \tsc{dat} \citep{baerman2005,caha2009,zompi2017,mcfadden2018,smith2019case}. That is, if one orders cases in this linear sequence, only contiguous regions in the sequence can be syncretic.
+It has widely been established that syncretism is restricted by the linear sequence \ac{nom} --- \ac{acc} --- \ac{dat} \citep{baerman2005,caha2009,zompi2017} (and see \citealt{mcfadden2018,smith2019} for similar claims concerning root suppletion). That is, if one orders cases in this linear sequence, only contiguous regions in the sequence can be syncretic.
 Following that, four possible patterns are attested crosslinguistically. First, all three cases are syncretic. Second, nominative and accusative are syncretic and the dative is not. Third, the accusative and the dative are syncretic and the nominative is not. Fourth, all cases are non-syncretic.
 
 There is one pattern that does not target continuous regions, but non-contiguous ones: nominative and dative are syncretic and accusative is not. This pattern is not attested crosslinguistically. In other words, there is no ABA pattern (in which a form B intervenes between the two identically formed As) \citep{bobaljik2012}.
 
-Table \ref{tbl:syncretisms} shows examples for each of these possible patterns. I give an example from a syncretism between nominative, accusative and dative from Dutch. The second person plural pronoun is \tit{jullie} `you.\tsc{pl}' is syncretic between nominative, accusative and dative.
+Table \ref{tbl:syncretisms} shows examples for each of these possible patterns. I give an example from a syncretism between nominative, accusative and dative from Dutch. The second person plural pronoun is \tit{jullie} `you.\ac{pl}' is syncretic between nominative, accusative and dative.
 I give an example from a syncretism between nominative and accusative but not dative from German. The third person singular feminine \tit{sie} `she/her' is syncretic between nominative and accusative. The dative has a separate form: \tit{ihr} `her'.
 I give an example from a syncretism between accusative and dative but not nominative from Icelandic. The first person singular plural is \tit{okkur} `us' is syncretic between accusative and dative. The nominative has a separate form: \tit{við} `we' \pgcitep{einarsson1949}{68}.
 I give an example from three distinct forms from Faroese. The second person singular is \tit{tú} `you' for nominative, \tit{teg} `you' for accusative and \tit{tær} `you' for dative \pgcitep{lockwood1977}{70}.
+Crucially, to the best of my knowledge, there is no language in which the nominative and the dative are syncretic but the accusative is not.
 
 \begin{table}[ht]
   \center
-  \caption {Syncretism in \tsc{nom} --- \tsc{acc} --- \tsc{dat}}
+  \caption {Syncretism in \ac{nom} --- \ac{acc} --- \ac{dat}}
     \begin{tabular}{cccccccc}
       \toprule
           \multicolumn{3}{c}{pattern}
@@ -479,13 +477,13 @@ I give an example from three distinct forms from Faroese. The second person sing
             & \cellcolor{LG}sie
             & \cellcolor{LG}sie
             & ihr
-            & 3\tsc{sg}.\tsc{f}
+            & 3\ac{sg}.\ac{f}
             & German \\
           A & B & B
             & við
             & \cellcolor{LG}okkur
             & \cellcolor{LG}okkur
-            & 1\tsc{pl}
+            & 1\ac{pl}
             & Icelandic \\
           A & B & C
             & tú
@@ -508,11 +506,11 @@ In sum, case syncretism follows the ordering of the case scale in headless relat
 
 \subsection{Formal containment}
 
-This section shows a second way in which \tsc{nom} < \tsc{acc} < \tsc{dat} is reflected in morphology: formal containment. In some languages, the form that is used for the accusative literally contains the form that is used for the nominative. In turn, the forms for the dative contains the form for the accusative. I illustrate this phenomenon with examples from Khanty.
+This section shows a second way in which \ac{nom} < \ac{acc} < \ac{dat} is reflected in morphology: formal containment \citep[cf.][]{smith2019,zompi2017,caha2010}. In some languages, the form that is used for the accusative literally contains the form that is used for the nominative. In turn, the forms for the dative contains the form for the accusative. I illustrate this phenomenon with examples from Khanty.
 
-Khanty (or Ostyak) \pgcitealt{nikolaeva1999}{16} shows formal containment in some of its pronouns. Three examples are given in Table \ref{tbl:cont-khanty}.
+Khanty (or Ostyak) shows formal containment in some of its pronouns (\pgcitealt{nikolaeva1999}{16} after \citealt{smith2019}). Three examples are given in Table \ref{tbl:cont-khanty}.
 
-The nominative form for the first person singular is \tit{ma} `I.\tsc{nom}'. The form for the accusative is \tit{ma:ne:m} `me'. This is the form for the nominative \tit{ma} plus the accusative marker \tit{-ne:m}. The form for the dative is \tit{ma:ne:mna} `me'. This is the form for the accusative \tit{ma:ne:m} plus the dative marker \tit{-na}. So, dative formally contains the accusative, and the accusative formally contains the nominative.
+The nominative form for the first person singular is \tit{ma} `I.\ac{nom}'. The form for the accusative is \tit{ma:ne:m} `me'. This is the form for the nominative \tit{ma} plus the accusative marker \tit{-ne:m}. The form for the dative is \tit{ma:ne:mna} `me'. This is the form for the accusative \tit{ma:ne:m} plus the dative marker \tit{-na}. So, dative formally contains the accusative, and the accusative formally contains the nominative.
 
 The third person singular and first person plural show the same pattern. The accusative forms \tit{luwe:l} `him/her' and \tit{muŋe:w} `us' contain the nominative forms \tit{luw} and the \tit{muŋ} plus the accusative marker \tit{-e:l} or \tit{-e:w}. The dative forms \tit{luwe:lna} `him/her' and \tit{muŋe:wna} `us' contain the accusative forms \tit{luwe:l} and \tit{muŋe:w} plus the dative marker \tit{-na}. Again, the dative formally contains the accusative, which in turn contains the nominative.
 
@@ -538,13 +536,14 @@ The third person singular and first person plural show the same pattern. The acc
   \end{tabular}\label{tbl:cont-khanty}
 \end{table}
 
-In sum, some languages morphologically look like \tsc{nom}-\tsc{acc}-\tsc{dat}. This exactly reflects the case scale \tsc{nom} < \tsc{acc} < \tsc{dat}.
+Other languages that show this phenomenon are West Tocharian \citep{gippert1987} and Vlakh and Kalderaš Romani (respectively \citealt{friedman1991} and \citealt{boretzky1994}).
 
+In sum, some languages morphologically look like \ac{nom}-\ac{acc}-\ac{dat}. This exactly reflects the case scale \ac{nom} < \ac{acc} < \ac{dat}.
 
 
 \section{Excluding the genitive}\label{sec:genitive}
 
-In the literature about headless relatives, the genitive is often discussed together with the nominative, accusative and dative \citep[cf.][]{harbert1978,pittner1995}. In this dissertation I restrict myself to cases that appear in all possible case competition combinations. The genitive does not fulfill that requirement, and is therefore excluded. I shortly discuss how the genitive is different from the three other cases.
+In the literature about headless relatives, the genitive is often discussed together with the nominative, accusative and dative \citep[cf.][]{harbert1978,pittner1995}. In this dissertation I do not discuss the genitive. The reason is that I restrict myself to cases that appear in all possible case competition combinations. As the genitive does not fulfill that requirement, it is therefore excluded.
 
 In Gothic headless relatives, there is data available of the genitive in case competition with the accusative. The genitive wins in this competition.
 I give an example in which the internal case is accusative and the external case is genitive in \ref{ex:gothic-gen-acc}.
@@ -554,18 +553,15 @@ The external case is genitive. The noun \tit{waiht} `thing' combines with a geni
 The relative pronoun \tit{þiz(e)} `what.\ac{gen}' appears in the external case: the genitive.
 
 \exg. ni waiht þiz \tbf{-ei} \tbf{gasehvun}\\
- not thing\scsub{[gen]} what.\ac{gen} -\tsc{comp} saw\scsub{[acc]}\\
+ not thing\scsub{[gen]} what.\ac{gen} -\ac{comp} saw\scsub{[acc]}\\
  `not any of (that) which they saw' \flushfill{Gothic, \ac{luke} 9:36, adapted from \pgcitealt{harbert1978}{340}}\label{ex:gothic-gen-acc}
 
-If the internal case is genitive and the external case is accusative, the genitive wins as well. There are no attested examples in Gothic of genitives in case competition with nominatives or datives.
+If the internal case is genitive and the external case is accusative, the genitive wins as well. Crucially, there are no attested examples in Gothic of genitives in case competition with nominatives or datives.
 
 The same holds for the two other main languages discussed in this thesis: Modern German and Old High German.
-In Modern German, case competitions have been reported between all possible case combinations, so also between genitives and nominatives, between genitives and accusatives, and between genitives and datives \citep[cf.]]{vogel2001}. The genitive wins over the nominative and the accusative. In a competition between the genitive and the dative neither of them gives a grammatical result.
-In Old High German might show some examples of case competition between genitives and accusatives and genitives and nominative. In these cases, the genitive always wins. No examples of datives against genitives are attested \citep{behaghel1923}.
+In Modern German, case competitions have been reported between all possible case combinations, so also between genitives and nominatives, between genitives and accusatives, and between genitives and datives \citep[cf.][]{vogel2001}. The genitive wins over the nominative and the accusative. In a competition between the genitive and the dative neither of them gives a grammatical result.
+Old High German might show some examples of case competition between genitives and accusatives and genitives and nominative. In these cases, the genitive always wins. No examples of datives against genitives are attested \citep{behaghel1923}.
 In sum, the genitive does not appear in all possible case competition combinations in all three languages, and is therefore excluded.
-
-The genitive differs from the other cases in a particular way. That is, nominative, accusative and dative are dependents of the verb (or prepositions). Genitives can be dependents of verbs, or they can be dependents of nouns, as possessors or partitives. Consider the example in \ref{ex:gothic-gen-acc}. The genitive relative pronoun \tit{þiz(e)} `what.\tsc{gen}' is a dependent of the noun \tit{waiht} `thing'. Most of the examples in headless relatives contain genitives that depend on nouns and not those that depend on verbs. The (genitive) possessor is also placed far away from the other three cases in \posscitet{keenan1977} relativization hiearchy.
-
 
 \section{Summary}
 
@@ -573,9 +569,11 @@ Case competition in headless relatives adheres to the case scale in \ref{ex:case
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale-sum}
 
-This case scale is not only found in case competition in headless relatives. Implicational hierarchies regarding two morphosyntactic phenomena appear across languages. The first one concerns agreement. If a language shows agreement with datives, it also shows agreement with accusatives and nominatives. If a language shows agreement with accusatives, it also shows agreement with nominatives.
+This case scale is not only found in case competition in headless relatives. Implicational hierarchies regarding two syntactic phenomena appear across languages. The first one concerns agreement. If a language shows agreement with datives, it also shows agreement with accusatives and nominatives. If a language shows agreement with accusatives, it also shows agreement with nominatives.
 The second implicational hierarchy concerns relativization. If a dative in a language can be relativized with a particular strategy, an accusative and a nominative can be too using the same strategy. If an accusative can be relativized with a particular strategy, so can a nominative with this strategy.
 
-The case scale also shows up in morphophonological patterns. First, if the cases are ordered according to the case scale, syncretism only target continuous forms, no ABA pattern appears. Second, some languages show how the dative formally contains accusative, and how the accusative formally contains the nominative.
+The case scale also shows up in morphological patterns. First, if the cases are ordered according to the case scale, syncretism only target continuous forms, no ABA pattern appears. Second, some languages show how the dative formally contains accusative, and how the accusative formally contains the nominative.
+
+These phenomena show that the pattern observed in headless relatives is not something that stands on itself. The scale is a pattern that recurs across languages and across different phenomena. Therefore, it should not be treated as an special process with its own stipulated rule. Instead, it is something general that should also follow from general processes in languages.
 
 The next chapter shows how features of the nominative, accusative and dative are organized. All facts presented in this chapter can be derived from the organization of these features.
