--- a/thesis.tex
+++ b/thesis.tex
@@ -40,7 +40,7 @@
 \include{introduction}
 
 \part{The winner of the competition}\label{part:complexity}
-\include{reoccuring-pattern}
+\include{recurring-pattern}
 \include{case-decomposition-meets-ellipsis}
 
 \part{The competitors in the competition}\label{part:direction}
@@ -64,7 +64,7 @@
 \endgroup
 \addcontentsline{toc}{chapter}{Primary texts}
 
-
+\newrefcontext[sorting=nyt]
 \printbibliography
 
 %%%%
