--- a/fenna-files/packages.sty
+++ b/fenna-files/packages.sty
@@ -38,7 +38,7 @@ boom/.style={for tree={s sep=10mm, inner sep=0, l=0}}
 
 
 %%%%REFERENCES%%%
-\usepackage[backend=biber,style=authoryear-comp,natbib=true,dashed=false]{biblatex}
+\usepackage[backend=biber,style=authoryear-comp,natbib=true,dashed=false,sorting=ynt]{biblatex}
 \newcommand{\posscitet}[1]{\citeauthor{#1}'s (\citeyear{#1})}
 \newcommand{\posscitealt}[1]{\citeauthor{#1}'s \citeyear{#1}}
 \newcommand{\possciteauthor}[1]{\citeauthor{#1}'s}
